--- a/project/frontend/src/customer/extras/landing.css
+++ b/project/frontend/src/customer/extras/landing.css
@@ -1,5 +1,5 @@
 .banner {
-    background: url("https://deshbhagatuniversity.in/wp-content/uploads/2024/08/955.jpg");
+    background: url("https://www.healthyeating.org/images/default-source/home-0.0/nutrition-topics-2.0/general-nutrition-wellness/2-2-2-2foodgroups_vegetables_detailfeature.jpg?sfvrsn=226f1bc7_6");
     background-repeat: no-repeat;
     background-size: cover;
   }
